# claude-anyteam

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
bug-triage/: B1-B5-packaging-and-slots.md  B2-send-message-lifecycle.md  B3-prose-reply-and-reporting-kit.md  B4-gemini-productivity.md  B6-turn-timeout.md  B7-fork-cleanup-status.md  B8-opencode-removal-status.md  B9-visibility-parity-investigation.md  REPORT_TEMPLATE.md
docs/: architecture.md  configuration.md  gemini-adapter-feasibility.md  gemini-adapter-limitations.md  install.md  roadmap.md
hooks/: session-start.sh
npm/: README.md  package-lock.json  package.json
schemas/: plan.schema.json
tests/: test_app_server_client.py  test_app_server_default.py  test_app_server_mcp_config.py  test_capability_declarations.py  test_capability_validation.py  test_claim_race.py  test_claude_native_backend.py  test_codex_event_matching.py  test_codex_invocation_shape.py  test_codex_log_bloat.py  test_codex_mcp_config.py  test_diagnose_cli.py  test_fix_forward.py  test_fork_dispatch.py  test_gemini_acp_cancel.py  test_gemini_acp_client.py  test_gemini_acp_crash_hygiene.py  test_gemini_acp_prompt_flow.py  test_gemini_acp_recovery.py  test_gemini_acp_session_reload.py  test_gemini_effort.py  test_gemini_invoke.py  test_gemini_loop_session_policy.py  test_gemini_next_turn_steer.py  test_gemini_plan_approval.py  test_gemini_registration.py  test_inbox_contention.py  test_inbox_guard.py  test_install_command.py  test_jsonrpc_stdio.py  test_kimi_invocation_shape.py  test_kimi_invoke.py  test_kimi_loop.py  test_kimi_mcp_config.py  test_lifecycle_stress.py  test_loop_unit.py  test_manifest_versions_locked.py  test_messages.py  test_model_effort_flags.py  test_npm_package.py  (+16 more)
(+112 files in other folders)
