[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-anyteam"
version = "0.1.0"
description = "Bring Codex-powered teammates into Claude Code today, with the claude-anyteam adapter built for multi-model expansion."
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
dependencies = [
    # Upstream cs50victor/claude-code-teams-mcp. Pinned to a local checkout for
    # feasibility prototype; swap to a git URL or PyPI release once a conformant
    # fork is published.
    "claude-teams",
    "pydantic>=2.10",
    # fastmcp is already a transitive dep of claude-teams; we use it directly
    # for the narrowed v7 wrapper MCP server in `claude_anyteam.wrapper_server`.
    "fastmcp==3.0.0b1",
    # v7.2 uses jsonschema to validate `--output-last-message` contents in
    # Python because `codex exec resume` on codex-cli 0.122.0 does not
    # accept `--output-schema`. Already a transitive dep; declared
    # explicitly because we import it directly now.
    "jsonschema>=4.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
claude-anyteam = "claude_anyteam.cli:main"
claude-anyteam-spawn-shim = "claude_anyteam.spawn_shim:main"
claude-anyteam-wrapper = "claude_anyteam.wrapper_server:main"
codex-teammate = "claude_anyteam.cli:main"
codex-teammate-spawn-shim = "claude_anyteam.spawn_shim:main"
codex-teammate-wrapper = "claude_anyteam.wrapper_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_anyteam"]

[tool.uv.sources]
claude-teams = { path = "/tmp/cs50victor-teams", editable = false }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
